[tool.poetry]
name = "postgres-homeworks"
version = "0.1.0"
description = ""
authors = ["gramm23 <serglapinofff@gmail.com>"]
readme = "README.md"
packages = [{include = "postgres_homeworks"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
